# rx-ui

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  _itest.sh  build.rs
backend/.sqlx/: query-005b02f1faba55ed5120cc5048d791ff53c0125e12f7bfc482d6b2d1003e6eef.json  query-01de4c9fff9d89faf38282e7f394d544e838f4341595fc073374fab9fd9ead53.json  query-050f7ef3065fe1f879a3a6e2891afbe49ed72d1db855e2272a56af63193e8509.json  query-09695aed28ac7000b8cd6d88b76dd2c0d899c84357438c954df740478adab18d.json  query-0b3bb6fddaf8f05307704ed82630f67abb71db810255171e2357ea07dd832324.json  query-0bc053f5d82d992fc4310583cb25dacc6c00fa6f07a7e40d12deab9ee98c8870.json  query-0c01ac248c01f5274490ec050bdbd4e325200b52d9adb614a8f298a35ae3e1f1.json  query-0d6715bd1301c6f39b2a6b588aeef0b41504b317be3425f5f9890de6dabfe5cd.json  query-0ffbf1a8241aa4f58064b6ad1b177046f51778396a89708247516bae9829f695.json  query-13049397e2089660694db725a00624197f07eaa4d5aee2688187d3abde5d7ba8.json  query-14247316cb24bee41be84ca2c0997d6326013e13df5d5708c23208e6066a5aec.json  query-14ae492b44e28ea5aacadeb3effe85464753194cb42646dced9e9e228570e948.json  query-15d257c473a3f14ef713f976db998e101364d94324abd2cf4353d7e88759805f.json  query-1d38e1927e04a381c98abe30928ff143ec2d823915be35e7c64cb5b6a78815d2.json  query-1e4ffd8b11979dbb253c4fd3aa2f4759a1e36fe6f8e97e2abcc050a4225e7288.json  query-235fa98a6a114b7fdcc7bee2ab410a5edd61a4ed491bbdf5240543d914d481c1.json  query-27972e6d5d7320609045f28309684c8b69e18ae20ca4b8b0d46cb766c217d1e9.json  query-28692bf5cbd960958e83d65abbd4abcd5723c87e57263ce1b1525199cc711574.json  query-29491b2152f6cefbcbbacf7a1e56b8f978c0e6d5fab9d8a6996b2f6090e4f519.json  query-296adc990fda0cc8c168f764602f8d60bc09e1162e4d9d2b7d810dd1154b57fa.json  query-2b354c04c85ff5744705d6885a72c718e82784c74509d854eae54d62692779e6.json  query-2c33aa4d32f6190b8bfca3ec8cc901f1961438953dda0d7a137fa3fd81233cf3.json  query-30d82f6d983a60613f9f7133d42b388c8d09d16f427071ebf217683f3095a960.json  query-330c66081d37f8732189db7208c85f67558d6e3f9309466fa407385d1055aafb.json  query-38240656c76819a3f53a87a1432572314a6076c45b085fd51b649e844eda091e.json  query-38c697a2abc445dbf43a1c5a1176fca11c35faca5ad64b16e86aecb566cfb185.json  query-3aa578c173d629a9b1658029d76d7f3ae079f04a36e316b92f08e105dd8b42b9.json  query-3b80f36df4639c7f7da96f7b2f092d0a5d3b1471320d5d82ec7be84fa412de9e.json  query-3beed519190b2834fd55295eff6036bcd3bb03f1bfd9512242a02fa7dbe3dbeb.json  query-3e7a9a57c9f956f307449d8862b9d107ea0b85d5ecf6329ff49a125e845485b7.json  query-3f4458a55e10b0759f572f06471120bad14b59898228894c3445e9c75fa1c609.json  query-3fd4201de1a809865db8ad3b8a191b4d5b08d9d821a40807f16809c925e0dd4a.json  query-40df3707038258147c55351f37256c5e28d400c35eb4940562596c80f47fbd8c.json  query-429079473c76d472ad73dbeba838a2737e1526ed2b4742a880926ff0566413b2.json  query-4612846efc8bf5ef5d688c3ca157ee4efaa3b4cd1cfa2d73a63b697844c1de54.json  query-47bcf02736554be21e46351efba6b12fcbe35ca7a9996e85076a959c70cd7e81.json  query-48da736f797f1fbb62ec04f62012ddc8e939333e9f3dcc76a8e65255229d5923.json  query-4a144a9fc48c2506ba6d8ea6860275a8eb24444e8ec45288b6fd393f3348c630.json  query-4b1abf716e8f5b9572aa6972afc8b83c69e059800de851c0acf4e42a6fde86a3.json  query-4d1a3e3e2324ec210ff366f73fc7b0fcae5eea52c5f4417d5b9b7b322b25565a.json  (+60 more)
backend/migrations/: 0001_init.sql  0002_token_version.sql  0003_redesign_inbounds.sql  0004_redesign_clients.sql  0005_inbound_sniffing_and_security.sql  0006_xhttp_advanced.sql  0007_xhttp_padding_session.sql  0008_ws_transport.sql  0009_tls_security.sql  0010_inbound_websocket_options.sql  0011_tls_advanced.sql  0012_tls_curve_preferences.sql  0013_inbound_vless_encryption.sql  0014_typed_layers.sql  0015_backfill_typed_layers.sql  0016_drop_legacy_inbound_columns.sql  0017_client_traffic_persistence.sql  0018_client_traffic_limit.sql  0019_panel_settings.sql  0020_client_auth.sql  0021_clients_email_index.sql  0022_client_sub_token.sql  0023_inbound_finalmask.sql  0024_subscription_settings.sql  0025_subscription_enabled.sql  0026_subscription_brand.sql  0027_subscription_service_url.sql  0028_subscription_port.sql  0029_inbound_sockopt.sql  0030_client_expiry.sql  0031_xray_settings.sql  0032_xray_routing.sql  0033_xray_custom_rules.sql  0034_xray_custom_outbounds.sql  0035_outbound_traffic.sql  0036_panel_tls.sql  0037_subscription_link_host.sql  0038_subscription_tls.sql  0039_inbound_traffic.sql  0040_client_reverse_tag.sql  (+2 more)
backend/proto/app/router/command/: command.proto
backend/proto/proxy/hysteria/: config.proto
backend/proto/transport/internet/finalmask/fragment/: config.proto
backend/proto/transport/internet/hysteria/: config.proto
backend/src/: auth.rs  db.rs  error.rs  host.rs  inbound_traffic.rs  logs.rs  main.rs  outbound_traffic.rs  static_assets.rs  traffic.rs
backend/src/api/: auth.rs  clients.rs  dashboard.rs  inbounds.rs  keygen.rs  logs.rs  mod.rs  outbounds.rs  settings.rs  subscription.rs  xray.rs
backend/src/models/: auth.rs  client.rs  inbound.rs  mod.rs  outbound.rs  patch.rs  stats.rs
backend/src/protocols/: mod.rs
backend/src/protocols/hysteria/: mod.rs  proto.rs
backend/src/protocols/vless/: mod.rs  proto.rs
backend/src/security/: mod.rs  reality.rs  tls.rs
backend/src/transports/: finalmask.rs  hysteria.rs  mod.rs  quic.rs  sockopt.rs  tcp.rs  ws.rs  xhttp.rs
backend/src/xray/: config_gen.rs  control.rs  grpc.rs  installer.rs  keygen.rs  mod.rs  orchestrator.rs  outbound_test.rs  proto.rs  reload.rs  router_rules.rs  share_link.rs
frontend/: .npmrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Root.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  errors.ts
frontend/src/components/: AppIcons.tsx  LogsModal.tsx  QrCard.tsx  RoutingRulesField.tsx  ServerInfoCard.tsx  SettingsPopover.tsx  Sidebar.tsx  SidebarStatus.tsx  TrafficCell.tsx  (+1 more)
(+54 files in other folders)
